<resources>
    <string name="app_name">绵阳移动办公</string>
    <string name="action_settings">Settings</string>
    <string name="public_contact">公共通讯录</string>
    <string name="phone_contact">个人通讯录</string>
    <string name="add_contact">新增联系人</string>
    <string name="contact_name">联系人姓名</string>
    <string name="contact_number">联系人电话</string>
    <string name="submit">提交</string>
    <string name="back">返回</string>
    <string-array name="process_data">
        <item>单行文本</item>
        <item>多行文本</item>
        <item>日期(年-月-日)</item>
    </string-array>
    <string-array name="news_type">
        <item>员工新闻</item>
        <item>公司新闻</item>
        <item>其他新闻</item>
    </string-array>
</resources>
