<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/background2">
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp">
        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:background="@color/title_blue"
            android:gravity="center"
            android:paddingTop="10dip"
            android:text="@string/add_contact"
            android:textColor="@color/words"
            android:textSize="25sp" />

        <ImageButton
            android:id="@+id/return5"
            android:onClick="ImageButtonClick"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/back"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginEnd="20dip"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dip"
            android:background="@color/title_blue"
            android:src="@mipmap/back"/>
    </FrameLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="500dp"
        android:layout_marginTop="5dp"
        android:background="@color/background2"
        android:orientation="vertical">
        <EditText
            android:id="@+id/contact_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dip"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingRight="10dp"
            android:inputType="text"
            android:gravity="start|center"
            android:background="@drawable/shape"
            android:hint="@string/contact_name"
            android:autofillHints="@string/contact_name"
            android:textSize="15sp"
            tools:targetApi="o" />
        <EditText
            android:id="@+id/contact_number"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dip"
            android:background="@drawable/shape"
            android:inputType="number"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:gravity="start|center"
            android:hint="@string/contact_number"
            android:autofillHints="@string/contact_number"
            android:textSize="15sp"
            tools:ignore="MissingPrefix"
            tools:targetApi="o" />
        <Button
            android:id="@+id/submit"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_marginLeft="250dp"
            android:layout_marginStart="250dp"
            android:layout_marginTop="180dp"
            android:background="@color/button"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>